# kevinshome-site

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt  vercel.json
kevinshome/: asgi.py  settings.py  urls.py  wsgi.py
mainapp/: quotes.py  s3_utils.py  urls.py  views.py
mainapp/templates/: filelist.htm  index.htm  login.htm  quotes.htm  upload.htm
mainapp/templates/segments/: _gohomefooter.htm
