[tool.poetry]
name = "kevinshome-site"
version = "0.1.0"
description = ""
authors = ["Noah <50159154+kevinshome@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
django = "^4.2.6"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
