[tool.poetry]
name = "kevinshome-site"
version = "0.1.0-1"
description = ""
authors = ["Noah Tanner <50159154+kevinshome@users.noreply.github.com>"]
readme = "README.md"
package-mode= false

[tool.poetry.dependencies]
python = "~3.12"
django = "^4.2.25"
requests = "^2.32.5"
python-dotenv = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
