[tool.poetry]
name = "kevinshome-site"
version = "0.1.0-1"
description = ""
authors = ["Noah Tanner <50159154+kevinshome@users.noreply.github.com>"]
readme = "README.md"
package-mode= false

[tool.poetry.dependencies]
python = ">=3.13"
django = "^4.2.25"
python-dotenv = "^1.2.1"
boto3 = "^1.43.36"
python-magic = "^0.4.27"
pyotp = "^2.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
